<resources>
    <string name="app_name">Open Weather</string>
    <string name="thermometer"></string>
    <string name="humidity"></string>
    <string name="barometer"></string>
    <string name="wind"></string>
    <string name="thunder_storm_day"></string>
    <string name="drizzle_day"></string>
    <string name="rain_day"></string>
    <string name="snow_day"></string>
    <string name="atmosphere"></string>
    <string name="clear_day"></string>
    <string name="cloudy_day"></string>
    <string name="thunder_storm_night"></string>
    <string name="drizzle_night"></string>
    <string name="rain_night"></string>
    <string name="snow_night"></string>
    <string name="clear_night"></string>
    <string name="cloudy_night"></string>
    <string name="degrees"></string>
    <string name="permission_denied">We need location permission to get your current weather :(</string>
    <string name="refresh"></string>
    <string name="no_location">No location found. App will get the forecast for default location which is Helsinki, Finland.</string>
</resources>
