<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginTop="10dp"
    android:clickable="false"
    android:focusable="false"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lt_daily_forecast"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_city_name"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/avenir_ltstd_roman"
            android:gravity="center_vertical"
            android:text="HELSINKI"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/weathericons"
            android:text="@string/cloudy_day"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha="0.7"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/weathericons"
                    android:text="@string/wind"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:fontFamily="@font/avenir_ltstd_light"
                    android:text="-"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:alpha="0.7"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/weathericons"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:fontFamily="@font/avenir_ltstd_light"
                    android:text="-"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_temperature_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:fontFamily="@font/avenir_ltstd_light"
                android:text="-"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/weathericons"
                android:text="@string/degrees"
                android:textColor="@color/white"
                android:textSize="40sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
